ultima actualizacion meta

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Somos un salón de peluquería y estética unisex que ha llegado a convertirse en
      un referente en el sector en la ciudad de Rosario.">
      <meta property:'og:type' content="web site"> 
-     <meta property:'og:title' content="Leo Di giorgio | peluqueria damas y caballeros">
+     <meta property:'og:title' content="Leo Di giorgio | peluqueria damas y caballeros!">
      <meta property:'og:url' content="https://leodigiorgio.000webhostapp.com/">
      <meta property:'og:image' content="https://cdn-icons-png.flaticon.com/512/4905/4905462.png">
      
