--- a/barberia.html
+++ b/barberia.html
@@ -58,22 +58,22 @@
             </div>
             <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0" style="margin: auto;">
 
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae similique officiis sapiente itaque
-                    dignissimos veniam eligendi quas? Temporibus incidunt error vitae ratione. Temporibus voluptatum
-                    amet id deleniti possimus eveniet laboriosam.
+                <h4>Tenemos tres tipos de afeitado:
+                    CONTEMPORÁNEO:Con máquina shaver y perfiles con navaja.
+                    CLÁSICO: Toallas calientes, espuma y navaja.
+                    SPA: Toallas + Vapor Ozono, espuma y navaja.
                 </h4>
             </div>
 
         </div>
         <div class="row">
             <div class="col-sm-6 col-md-5 col-lg-6">
-                <img src="imagenes/barberia2.jpg" alt="maquina y peine utilizados en el salon"
-                    class="damas-imagen">
+                <img src="imagenes/barberia2.jpg" alt="maquina y peine utilizados en el salon" class="damas-imagen">
             </div>
             <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0" style="margin: auto;">
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda illum, odit modi perspiciatis
-                    commodi labore, maxime qui corrupti eius reiciendis quam sunt amet quidem? Deleniti recusandae quas
-                    ex esse? Perferendis?</h4>
+                <h4>Dedicamos el tiempo necesario para conocer cosas como los productos o utensilios que
+                    utiliza a la hora de peinarse o arreglarse la barba, cuánto tiempo dispone para su cuidado personal,
+                    si el corte de pelo o el arreglo de barba es adecuado para el tipo de trabajo que tiene, etc.</h4>
             </div>
         </div>
     </section>
@@ -84,9 +84,9 @@
                 <img src="imagenes/barberia3.jpg" alt="chico cortando cabello masculino" class="damas-imagen">
             </div>
             <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0" style="margin: auto;">
-                <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates, dicta soluta praesentium fuga
-                    officiis vitae vero cum, consectetur culpa in quia quaerat, hic esse inventore quas facilis ipsa
-                    molestias. Et?
+                <h4>Realizamos distintos tipos de corte de cabello tanto con tijeras, navaja y máquina.
+                    Nuestro equipo está capacitado con las últimas técnicas y tendencias para asesorar a cada cliente a
+                    conseguir su estilo único.
                 </h4>
             </div>
         </div>
@@ -95,10 +95,9 @@
                 <img src="imagenes/barberia4.jpg" alt="foto mostrando bebidas" class="damas-imagen">
             </div>
             <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0" style="margin: auto;">
-                <h4>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi debitis explicabo sunt beatae, quia
-                    repellendus sequi. Nobis natus minus dolores ipsam alias velit necessitatibus, laboriosam tenetur
-                    iure, doloremque animi similique.
+                <h4>Tenemos bartender y te recibirá para hacer más amena tu estadía. Cafetería, cerveza
+                    artesanal, cocktails clásicos y de autor con las primeras marcas
+                    presentes.
                 </h4>
             </div>
         </div>
@@ -135,4 +134,5 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
