--- a/damas.html
+++ b/damas.html
@@ -58,22 +58,22 @@
             </div>
             <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0" style="margin: auto;">
 
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae similique officiis sapiente itaque
-                    dignissimos veniam eligendi quas? Temporibus incidunt error vitae ratione. Temporibus voluptatum
-                    amet id deleniti possimus eveniet laboriosam.
+                <h4>Una experiencia inolvidable, única y a la altura de tus expectativas. Contamos con un amplio abanico
+                    de servicios entre los que destacamos los tratamientos capilares, cambios de color, balayage,
+                    peinados de fiestas, maquillaje, Estamos en constante
+                    formación aprendizaje para ofrecerte lo último en tratamientos de belleza.
                 </h4>
             </div>
 
         </div>
         <div class="row">
             <div class="col-sm-6 col-md-5 col-lg-6">
-                <img src="imagenes/dama2.jpg" alt="foto mostrando peinado con bucles"
-                    class="damas-imagen">
+                <img src="imagenes/dama2.jpg" alt="foto mostrando peinado con bucles" class="damas-imagen">
             </div>
             <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0" style="margin: auto;">
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda illum, odit modi perspiciatis
-                    commodi labore, maxime qui corrupti eius reiciendis quam sunt amet quidem? Deleniti recusandae quas
-                    ex esse? Perferendis?</h4>
+                <h4>Todos los estilistas de nuestro espacio, son especialistas en todo tipo de cabellos para
+                    trabajos de styling. Peinados con onda y volumen, rizado o liso, peinados de fiesta o recogidos.
+                    Cualquier ocasión es perfecta para lucir un cabello sano y elegante.</h4>
             </div>
         </div>
     </section>
@@ -84,9 +84,11 @@
                 <img src="imagenes/dama3.jpg" alt="foto cortando cabello largo" class="damas-imagen">
             </div>
             <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0" style="margin: auto;">
-                <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates, dicta soluta praesentium fuga
-                    officiis vitae vero cum, consectetur culpa in quia quaerat, hic esse inventore quas facilis ipsa
-                    molestias. Et?
+                <h4>Antes de comenzar un corte de cabello, realizamos un diagnostico capilar para
+                    conocer mejor tu cabello y sus necesidades. Te asesoraremos y te presentamos opciones del estilo que
+                    más te
+                    favorecen, según tu fisionomía y tu tipo de cabello, para lograr un estilo unico y facilitar su
+                    mantenimiento en casa.
                 </h4>
             </div>
         </div>
@@ -95,10 +97,9 @@
                 <img src="imagenes/dama4.jpg" alt="modelo femenina mostrando su maquillaje" class="damas-imagen">
             </div>
             <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0" style="margin: auto;">
-                <h4>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi debitis explicabo sunt beatae, quia
-                    repellendus sequi. Nobis natus minus dolores ipsam alias velit necessitatibus, laboriosam tenetur
-                    iure, doloremque animi similique.
+                <h4>Todos los estilistas de nuestro espacio, son especialistas en todo tipo de cabellos para
+                    trabajos de styling. Peinados con onda y volumen, rizado o liso, peinados de fiesta o recogidos.
+                    Cualquier ocasión es perfecta para lucir un cabello sano y elegante.
                 </h4>
             </div>
         </div>
@@ -136,4 +137,5 @@
         crossorigin="anonymous"></script>
 
 </body>
+
 </html>
