--- a/nosotros.html
+++ b/nosotros.html
@@ -65,9 +65,9 @@
         </div>
 
         <div class="contenedorNosotros-item">
-          <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore ut animi quaerat fuga rerum cupiditate
-            facilis veritatis aperiam quae aut perferendis alias, illo praesentium doloremque ullam eligendi. Labore,
-            iste quos!</h4>
+          <h4>Hacemos especial hincapié en la calidad del servicio, generando una experiencia completa. El
+            trato respetuoso de todos los que forman parte, un servicio de bar de primera calidad donde se pueden
+            degustar cockails de autor, cerveza artesanal y cafetería convencional que harán más amena la espera.</h4>
         </div>
       </div>
     </section>
@@ -102,4 +102,5 @@
     crossorigin="anonymous"></script>
 
 </body>
+
 </html>
