--- a/turnos.html
+++ b/turnos.html
@@ -83,48 +83,48 @@
       <div class="caja-checkbox">
         <p> Servicio que quieres contratar:</p>
 
-        <label>1- Corte caballero
-          <input type="checkbox" name="servivio" value="corte">
+        <label>
+          <input type="checkbox" name="servivio" value="corte"> Corte caballero
         </label>
 
-        <label>2- Barba
-          <input type="checkbox" name="servivio" value="barba">
+        <label>
+          <input type="checkbox" name="servivio" value="barba"> Barba
         </label>
 
-        <label>3- Corte y Barba
-          <input type="checkbox" name="servivio" value="corte y barba">
+        <label>
+          <input type="checkbox" name="servivio" value="corte y barba"> Corte y Barba
         </label>
 
-        <label>4- Corte dama
-          <input type="checkbox" name="servivio" value="corte dama">
+        <label>
+          <input type="checkbox" name="servivio" value="corte dama"> Corte dama
         </label>
 
-        <label>5- Reflejos
-          <input type="checkbox" name="servivio" value="reflejos">
+        <label>
+          <input type="checkbox" name="servivio" value="reflejos"> Reflejos
         </label>
 
-        <label>6- Alisado
-          <input type="checkbox" name="servivio" value="alisado">
+        <label>
+          <input type="checkbox" name="servivio" value="alisado"> Alisados
         </label>
 
-        <label>7- Hidratacion
-          <input type="checkbox" name="servivio" value="hidratacion">
+        <label>
+          <input type="checkbox" name="servivio" value="hidratacion"> Hidratacion
         </label>
 
-        <label>8- Uñas
-          <input type="checkbox" name="servivio" value="uñas">
+        <label>
+          <input type="checkbox" name="servivio" value="uñas"> Uñas
         </label>
 
-        <label>9- Masajes
-          <input type="checkbox" name="servivio" value="masajes">
+        <label>
+          <input type="checkbox" name="servivio" value="masajes"> Masajes
         </label>
 
-        <label>10-Depilacion
-          <input type="checkbox" name="servivio" value="depilacion">
+        <label>
+          <input type="checkbox" name="servivio" value="depilacion"> Depilacion
         </label>
 
-        <label>11- Otro
-          <input type="checkbox" name="servivio" value="otro">
+        <label>
+          <input type="checkbox" name="servivio" value="otro"> Otros
         </label>
       </div>
 
