--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   navaja, afeitado, peinados, 15 años, bodas, graduaciones, tijeras, peines, recogidos">
     <meta name="description" content="Somos un salón de peluquería y estética unisex que ha llegado a convertirse en
      un referente en el sector en la ciudad de Rosario.">
-     <meta property='og:type' content="web site"> 
-     <meta property='og:title' content="Leo Di giorgio | peluqueria damas y caballeros!">
-     <meta property='og:url' content="https://leodigiorgio.000webhostapp.com/">
-     <meta property='og:image' content="https://cdn-icons-png.flaticon.com/512/4905/4905462.png">
-     
+    <meta property='og:type' content="web site">
+    <meta property='og:title' content="Leo Di giorgio | peluqueria damas y caballeros!">
+    <meta property='og:url' content="https://leodigiorgio.000webhostapp.com/">
+    <meta property='og:image' content="https://cdn-icons-png.flaticon.com/512/4905/4905462.png">
+
     <title>Leo Di giorgio | peluqueria damas y caballeros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -115,15 +115,17 @@
                 <img src="imagenes/index1.jpg" alt="herramientas para cortar el cabello" class="gallery-imagen">
             </div>
             <div class="col">
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, culpa.</h4>
+                <h4> Generamos un espacio único donde el cuidado de la imagen, el buen servicio y el disfrute de la
+                    estadía sean característicos.</h4>
             </div>
 
             <div class="col">
                 <img src="imagenes/index2.jpg" alt="sepillos para peinar el cabello" class="gallery-imagen">
             </div>
             <div class="col">
-                <h4>Lorem ipsum, odio ab nostrum iste nesciunt eaque nihil dignempore. Vperspiciatis culpa voluptas
-                    earum.</h4>
+                <h4>Relajación, tranquilidad, ambiente agradable... una vez que cruces la puerta
+                    empieza tu momento favorito; tiempo para mimarte, olvidarte de todo lo demás y disfrutar de un rato
+                    para ti.</h4>
             </div>
         </div>
     </section>
@@ -181,4 +183,5 @@
         crossorigin="anonymous"></script>
 
 </body>
+
 </html>
