segunda entrega proyecto js

--- a/turnos.html
+++ b/turnos.html
@@ -59,7 +59,7 @@
 
   <!---- FORMULARIO ---->
   <section >
-    <form action="turnos.php" method="post" class="caja-formulario">
+    <form action="turnos.php" method="post" class="caja-formulario" id="formulario">
       <label>
         <p>Nombre y Apellido:</p>
         <input class="datos-cliete" type="text" name="nombre y apellid" placeholder="Nombre y Apellido">
@@ -133,7 +133,7 @@
         <input class="comentario" type="text" placeholder="Agregar dias y horarios posibles">
       </label>
 
-      <input type="button" value="Solicitar turno" class="button">
+      <input type="submit" value="Solicitar turno" class="button">
     </form>
   </section>
   <!---- fin FORMULARIO ---->
